feat script: 대본 정렬 옵션 구현